--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,3 +1,79 @@
+#content {
+  height: 400px;
+  width: 400px;
+  border: 2px solid green;
+  background: #D4EDD4;
+  position: absolute;
+}
+
 .chat-app {
-  background: green;
+  height: 100%;
+  padding-bottom: 40px;
+  > h1 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+  }
+}
+
+.chat-login {
+  button {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+  padding-bottom: 5px;
+  border-bottom: 1px solid green;
+}
+
+.chat-logout {
+  button {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+  padding-bottom: 5px;
+  border-bottom: 1px solid green;
+  color: blue;
+}
+
+.chat-input {
+  border-top: 1px solid green;
+  padding: 10px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  button {
+    margin-right: 10px;
+  }
+}
+
+.chat-screen {
+  height: 240px;
+  margin: 0px;
+  overflow-y: scroll;
+  padding: 20px;
+  li {
+    list-style: none;
+  }
+}
+
+.message {
+  display: list-item;
+
+  .message-user {
+    float: left;
+    padding-right: 10px;
+    text-align: right;
+  }
+  .message-text {
+  }
+}
+.message-pending {
+  .message-text {
+    color: grey;
+  }
+}
+.message-self {
+  .message-user{
+    color: blue;
+  }
 }
