--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -11,6 +11,7 @@
   padding-bottom: 40px;
   > h1 {
     margin-top: 0px;
+    margin-left: 5px;
     margin-bottom: 5px;
   }
 }
@@ -71,7 +72,7 @@
 }
 .message-pending {
   .message-text {
-    color: grey;
+    color: #AFAFAF;
   }
 }
 .message-self {
